<resources>
    <string name="app_name">RegisterPlus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="reg_address">Address</string>
    <string name="reg_name">Name</string>
    <string name="reg_get_token_button">Get Token</string>
    <string name="reg_name_hint">Please enter your full name.</string>
    <string name="reg_address_hint">Please enter your Address</string>
    <string name="drawerLayout_aboutUs">About Us</string>
    <string name="drawerLayout_myTokens">My Tokens</string>
    <string name="drawerLayout_home">Home</string>

    <string name="aboutUsText">
        \n RegisterPlus app records arrival of the patients for medical care. \n
        \nVersion 1.0 (Jan 2016)\n
        Copyrights &#169; primeCode.net\n
    </string>
    <string name="reg_nature_of_inquiry">Nature of Inquiry</string>
    <string name="reg_nhs_number">Please enter your NHS number</string>
    <string name="reg_nhs">NHS Number</string>
    <string name="view_my_tokens_button">View My Tokens</string>
    <string name="query_nhs">Please Enter Your NHS number</string>

    <string-array name="inqury_nature_array">

        <item>Select from the list</item>
        <item>General Enquiry</item>
        <item>Registration</item>
        <item>Book Appointment</item>
        <item>Submit Samples</item>
    </string-array>
</resources>
